--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ a {
   --text-primary: black;
   --text-secondary: royalblue;
   --accent: purple;
+
   --colorR: 255;
   --colorG: 255;
   --colorB: 255;
@@ -29,7 +30,7 @@ a {
   --background: black;
   --text-primary: white;
   --text-secondary: grey;
-  --accent: darkred;
+  --accent: rgb(255, 251, 0);
   --colorR: 0;
   --colorG: 0;
   --colorB: 0;
