--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ a {
 [data-theme="dark"] {
   --background: black;
   --text-primary: white;
-  --text-secondary: grey;
+  --text-secondary: #808080;
   --accent: rgb(255, 251, 0);
   --colorR: 0;
   --colorG: 0;
