mobile view navbar width fixed

--- a/components/About/about.module.scss
+++ b/components/About/about.module.scss
@@ -77,3 +77,8 @@
     color: var(--text-primary);
   }
 }
+@media screen and (max-width: 400px) {
+  .about {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+}
