--- a/components/Skills/skills.module.scss
+++ b/components/Skills/skills.module.scss
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  .skills_heading {
+    font-size: 3rem;
+    color: royalblue;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
   .progressBar_container {
     display: flex;
     flex-direction: column;
@@ -13,9 +18,10 @@
       max-width: 1000px;
       text-align: end;
       width: 80%;
+      font-size: 2rem;
     }
     .container {
-      border-radius: 1rem;
+      border-radius: 3rem;
       width: 80%;
       max-width: 1000px;
       background: grey;
@@ -23,36 +29,65 @@
       margin-top: 1rem;
 
       .javascript_bar {
-        width: 90%;
-        height: 30px;
+        width: 93%;
+        height: 45px;
         background: var(--text-primary);
-        box-shadow: 0 0 30px white;
-        border-radius: 1rem;
+        box-shadow: 0 0 10px var(--text-primary);
+        border-radius: 3rem;
         animation: jsBar 2s 5;
+
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
       .react_bar {
-        width: 85%;
-        height: 30px;
+        width: 90%;
+        height: 45px;
         background: var(--text-primary);
-        box-shadow: 0 0 30px white;
-        border-radius: 1rem;
+        box-shadow: 0 0 10px var(--text-primary);
+        border-radius: 3rem;
         animation: reactBar 2s 5;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+      }
+      .redux_bar {
+        width: 88%;
+        height: 45px;
+        background: var(--text-primary);
+        box-shadow: 0 0 10px var(--text-primary);
+        border-radius: 3rem;
+        animation: reactBar 2s 5;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
       .HTMLCSS_bar {
-        width: 80%;
-        height: 30px;
+        width: 89%;
+        height: 45px;
         background: var(--text-primary);
-        box-shadow: 0 0 30px white;
-        border-radius: 1rem;
+        box-shadow: 0 0 10px var(--text-primary);
+        border-radius: 3rem;
         animation: HtmlBar 2s 5;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
       .NextJS_bar {
         width: 60%;
-        height: 30px;
+        height: 45px;
         background: var(--text-primary);
-        border-radius: 1rem;
-        box-shadow: 0 0 30px white;
+        border-radius: 3rem;
+        box-shadow: 0 0 10px var(--text-primary);
         animation: nextjsBar 2s 5;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: end;
       }
     }
   }
