--- a/components/Projects/projects.module.scss
+++ b/components/Projects/projects.module.scss
@@ -12,7 +12,7 @@
       margin-top: 5rem;
       .vertical-timeline-element {
         .vertical-timeline-element-icon {
-          background-color: var(--background);
+          background-color: var(--background-primary);
           box-shadow: 0 0 0 4px var(--text-primary);
           width: 40px;
           height: 40px;
@@ -21,7 +21,7 @@
         .vertical-timeline-element-content {
           box-shadow: 0 0 20px var(--text-primary);
           background-color: var(--text-primary);
-          color: var(--background);
+          color: var(--background-primary);
           .vertical-timeline-element-content-arrow {
             border-right: 7px solid var(--text-primary);
           }
