--- a/components/About/about.module.scss
+++ b/components/About/about.module.scss
@@ -7,12 +7,12 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   box-shadow: 0 0 20px var(--text-primary);
   .photo_section {
-    height: 700px;
+    height: 750px;
     width: 100%;
     .photo {
       background-image: url("./../../public/mohit1.jpg");
       height: 100%;
-      background-position: center center;
+      background-position: 0% 10%;
       background-size: cover;
     }
   }
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    background-color: var(--background);
+    background-color: var(--background-primary);
     .text {
       font-size: 5rem;
       display: flex;
